# langestefan.github.io

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  Dockerfile  Gemfile  LICENSE  Manifest.toml  Project.toml  README.md  _config.yml  feed.xml  index.html  robots.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: broken-links.yml  pre-commit.yml
_bibliography/: papers.bib
_data/: repositories.yml  socials.yml
_includes/: citation.liquid  distill_scripts.liquid  scripts.liquid
_layouts/: default.html  distill.liquid
_news/: announcement_1.md
_pages/: about.md  blog.md  contact.md  index.md  repositories.md
_pages/dropdown/: index.html
_plugins/: include_code.rb  markdown_alerts.rb
_posts/: 2024-12-25-welcome-to-jekyll.markdown
_posts/energy/hems/: 2026-02-17-hems-optimization.md  hems.ipynb  pyproject.toml
_posts/energy/hems/src/HEMS/: base.py  battery.py  const.py  heat_pump.py  hems.py  load.py  solar.py  weather.py
_sass/: _base.scss  _distill.scss
_sass/font-awesome/: _icons.scss  fontawesome.scss
_sass/tabler-icons/: tabler-icons-filled.scss  tabler-icons-outline.scss  tabler-icons.scss
assets/css/: alerts.css  bootstrap.min.css  jekyll-pygments-themes-github.css  jekyll-pygments-themes-native.css  main.css  main.css.map  main.scss  mdb.min.css  theorem.css
assets/js/: heading-anchors.js  (+1 more)
blog/: index.html
cv/: index.html
news/: index.html
people/: index.html
projects/: index.html
publications/: index.html
repositories/: index.html
src/: Blog.jl
teaching/: index.html
(+122 files in other folders)
