[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HEMS"
version = "0.1.0"
description = "My local package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cvxpy>=1.7.5",
    "highspy>=1.13.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pvlib>=0.15.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
